RESOLVED FIXED312718
Resize handle doesn't work on iframe container when handle overlaps iframe
https://bugs.webkit.org/show_bug.cgi?id=312718
Summary Resize handle doesn't work on iframe container when handle overlaps iframe
github.ds
Reported 2026-04-19 06:39:47 PDT
Created attachment 479205 [details] Minimal reproducible example Steps to reproduce: 1. Open attachment. 2. Try to drag resize handle. Expected behavior: The element resizes. (Works in Chrome and Firefox.) Actual behavior: The element does not resize. From what I can observe, the following circumstances are necessary for this to occur. - The iframe has a resizable parent. - The parent's resize handle overlaps the box of the iframe.
Attachments
Minimal reproducible example (1.58 KB, text/html)
2026-04-19 06:39 PDT, github.ds
no flags
[fast-cq]Patch (6.99 KB, patch)
2026-04-27 07:03 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2026-04-26 06:40:11 PDT
alan
Comment 2 2026-04-26 13:18:36 PDT
alan
Comment 3 2026-04-27 07:03:43 PDT
Created attachment 479333 [details] [fast-cq]Patch
EWS
Comment 4 2026-04-27 08:50:19 PDT
Committed 312099@main (534592ef55da): <https://commits.webkit.org/312099@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 479333 [details].
Note You need to log in before you can comment on or make changes to this bug.