Resize handle doesn't work on iframe container when handle overlaps iframe https://bugs.webkit.org/show_bug.cgi?id=312718 <rdar://problem/175621855>

Reviewed by NOBODY (OOPS!).

The resize handle is painted on top of all content, but the hit-test
checked it after child layers. When a child with its own layer (e.g.
position: relative, will-change: transform, iframe) covered the resize
corner, the child caught the click first and the resize check never ran.

The fix moves the resize hit-test before all child layer checks. This
matches paint order: last painted = first hit-tested.

Test: fast/css/resize-corner-over-child-layer.html

* LayoutTests/fast/css/resize-corner-over-child-layer-expected.txt: Added.
* LayoutTests/fast/css/resize-corner-over-child-layer.html: Added.
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::hitTestLayer):